[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/MenuFlaux.png" type="Texture" id=1]
[ext_resource path="res://Montreal.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/vievr.png" type="Texture" id=3]
[ext_resource path="res://assets/viep.png" type="Texture" id=4]
[ext_resource path="res://assets/Flaux/FlauxBlessee0_0.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Flaux.gd" type="Script" id=6]
[ext_resource path="res://assets/Flaux/FlauxBlessee1_0.png" type="Texture" id=7]
[ext_resource path="res://assets/Flaux/FlauxBlessee1_1.png" type="Texture" id=8]
[ext_resource path="res://assets/Flaux/FlauxBlessee0_1.png" type="Texture" id=9]
[ext_resource path="res://assets/Flaux/FlauxBlessee2_0.png" type="Texture" id=10]
[ext_resource path="res://assets/Flaux/FlauxKO1.png" type="Texture" id=11]
[ext_resource path="res://assets/Flaux/FlauxInquiete0.png" type="Texture" id=12]
[ext_resource path="res://assets/Flaux/FlauxInquiete1.png" type="Texture" id=13]
[ext_resource path="res://assets/Flaux/FlauxKO2.png" type="Texture" id=14]
[ext_resource path="res://assets/Flaux/FlauxKO0.png" type="Texture" id=15]
[ext_resource path="res://assets/Flaux/FlauxEnervee0.png" type="Texture" id=16]
[ext_resource path="res://assets/Flaux/FlauxBlessee2_1.png" type="Texture" id=17]
[ext_resource path="res://assets/Flaux/FlauxFatiguee1.png" type="Texture" id=18]
[ext_resource path="res://assets/Flaux/FlauxEnervee2.png" type="Texture" id=19]
[ext_resource path="res://assets/Flaux/FlauxNeutre0.png" type="Texture" id=20]
[ext_resource path="res://assets/Flaux/FlauxNeutre1.png" type="Texture" id=21]
[ext_resource path="res://assets/Flaux/FlauxNeutre2.png" type="Texture" id=22]
[ext_resource path="res://assets/Flaux/FlauxInquiete2.png" type="Texture" id=23]
[ext_resource path="res://assets/Flaux/FlauxFatiguee2.png" type="Texture" id=24]
[ext_resource path="res://assets/Flaux/FlauxFatiguee0.png" type="Texture" id=25]
[ext_resource path="res://assets/Flaux/FlauxEnervee1.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 11 ), ExtResource( 14 ) ],
"loop": true,
"name": "KO",
"speed": 3.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "Neutre",
"speed": 3.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 23 ) ],
"loop": true,
"name": "Inquiete",
"speed": 3.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 26 ), ExtResource( 19 ) ],
"loop": true,
"name": "Enervee",
"speed": 3.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 18 ), ExtResource( 24 ) ],
"loop": true,
"name": "Fatiguee",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 17 ) ],
"loop": false,
"name": "Blessee",
"speed": 6.0
} ]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Flaux" type="HBoxContainer"]
margin_left = 622.0
margin_right = 1240.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlauxPortrait" type="MarginContainer" parent="."]
margin_right = 250.0
margin_bottom = 280.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="VBoxContainer" type="VBoxContainer" parent="FlauxPortrait"]
margin_left = 5.0
margin_right = 245.0
margin_bottom = 280.0

[node name="Cadre" type="Panel" parent="FlauxPortrait/VBoxContainer"]
margin_right = 240.0
margin_bottom = 240.0
rect_min_size = Vector2( 240, 240 )

[node name="FlauxSprite" type="AnimatedSprite" parent="FlauxPortrait/VBoxContainer/Cadre"]
position = Vector2( 120, 120 )
frames = SubResource( 2 )
animation = "Neutre"
frame = 1
playing = true

[node name="FlauxLifeBar" type="TextureProgress" parent="FlauxPortrait/VBoxContainer"]
margin_top = 244.0
margin_right = 240.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 36 )
max_value = 177.0
value = 177.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="FlauxMenu" type="MarginContainer" parent="."]
margin_left = 254.0
margin_right = 618.0
margin_bottom = 280.0
size_flags_horizontal = 3
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="FlauxMenu"]
margin_left = 5.0
margin_right = 364.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )

[node name="Menu" type="MarginContainer" parent="FlauxMenu/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="FlauxMenu/Background/Menu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 354.0
margin_bottom = 275.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="FlauxMenu/Background/Menu/VBoxContainer"]
margin_right = 349.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
columns = 2

[node name="SkillSeCacher" type="Button" parent="FlauxMenu/Background/Menu/VBoxContainer/GridContainer" groups=["FlauxButtons"]]
margin_right = 172.0
margin_bottom = 48.0
focus_neighbour_left = NodePath("../SkillCoupPlongeant")
focus_neighbour_top = NodePath("../SkillLabourage")
focus_neighbour_right = NodePath("../SkillCoupPlongeant")
focus_neighbour_bottom = NodePath("../SkillLabourage")
focus_next = NodePath("../SkillCoupPlongeant")
focus_previous = NodePath("../SkillAffutage")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/disabled = SubResource( 1 )
button_mask = 0
text = "Se cacher"

[node name="SkillCoupPlongeant" type="Button" parent="FlauxMenu/Background/Menu/VBoxContainer/GridContainer" groups=["FlauxButtons"]]
margin_left = 176.0
margin_right = 348.0
margin_bottom = 48.0
focus_neighbour_left = NodePath("../SkillSeCacher")
focus_neighbour_top = NodePath("../SkillAffutage")
focus_neighbour_right = NodePath("../SkillSeCacher")
focus_neighbour_bottom = NodePath("../SkillLaceration")
focus_next = NodePath("../SkillLabourage")
focus_previous = NodePath("../SkillSeCacher")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/disabled = SubResource( 1 )
button_mask = 0
text = "Coup plongeant"

[node name="SkillLabourage" type="Button" parent="FlauxMenu/Background/Menu/VBoxContainer/GridContainer" groups=["FlauxButtons"]]
margin_top = 52.0
margin_right = 172.0
margin_bottom = 100.0
focus_neighbour_left = NodePath("../SkillCoupPlongeant")
focus_neighbour_top = NodePath("../SkillSeCacher")
focus_neighbour_right = NodePath("../SkillLaceration")
focus_neighbour_bottom = NodePath("../SkillSeCacher")
focus_next = NodePath("../SkillLaceration")
focus_previous = NodePath("../SkillCoupPlongeant")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/disabled = SubResource( 1 )
button_mask = 0
text = "Labourage"

[node name="SkillLaceration" type="Button" parent="FlauxMenu/Background/Menu/VBoxContainer/GridContainer" groups=["FlauxButtons"]]
margin_left = 176.0
margin_top = 52.0
margin_right = 348.0
margin_bottom = 100.0
focus_neighbour_left = NodePath("../SkillLabourage")
focus_neighbour_top = NodePath("../SkillCoupPlongeant")
focus_neighbour_right = NodePath("../SkillLabourage")
focus_neighbour_bottom = NodePath("../SkillAffutage")
focus_next = NodePath("../SkillAffutage")
focus_previous = NodePath("../SkillLabourage")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/disabled = SubResource( 1 )
button_mask = 0
text = "Lacération"

[node name="PV" type="Label" parent="FlauxMenu/Background/Menu/VBoxContainer/GridContainer"]
margin_top = 117.0
margin_right = 172.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
text = "PV : 177 / 177"
align = 1

[node name="SkillAffutage" type="Button" parent="FlauxMenu/Background/Menu/VBoxContainer/GridContainer" groups=["FlauxButtons"]]
margin_left = 176.0
margin_top = 104.0
margin_right = 348.0
margin_bottom = 152.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../SkillLaceration")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../SkillCoupPlongeant")
focus_next = NodePath("../SkillSeCacher")
focus_previous = NodePath("../SkillLaceration")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/disabled = SubResource( 1 )
text = "Affûtage"

[node name="Séparation" type="ColorRect" parent="FlauxMenu/Background/Menu/VBoxContainer"]
margin_top = 158.0
margin_right = 349.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.08

[node name="MarginContainer" type="MarginContainer" parent="FlauxMenu/Background/Menu/VBoxContainer"]
margin_top = 168.0
margin_right = 349.0
margin_bottom = 270.0
rect_min_size = Vector2( 349, 65 )
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Description" type="Label" parent="FlauxMenu/Background/Menu/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 344.0
margin_bottom = 97.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Flaux, chasseuse de trésors qui elle, savait ce qu'elle faisait. Confiante, blageuse, rapide, et inflige beaucoup de dégâts."
autowrap = true
clip_text = true

[connection signal="pressed" from="FlauxMenu/Background/Menu/VBoxContainer/GridContainer/SkillSeCacher" to="." method="_on_SkillSeCacher_pressed"]
[connection signal="pressed" from="FlauxMenu/Background/Menu/VBoxContainer/GridContainer/SkillCoupPlongeant" to="." method="_on_SkillCoupPlongeant_pressed"]
[connection signal="pressed" from="FlauxMenu/Background/Menu/VBoxContainer/GridContainer/SkillLabourage" to="." method="_on_SkillLabourage_pressed"]
[connection signal="pressed" from="FlauxMenu/Background/Menu/VBoxContainer/GridContainer/SkillLaceration" to="." method="_on_SkillLaceration_pressed"]
[connection signal="pressed" from="FlauxMenu/Background/Menu/VBoxContainer/GridContainer/SkillAffutage" to="." method="_on_SkillAffutage_pressed"]
